<resources>
    <string name="app_name">AppLibros2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mi Pequeña Biblioteca</string>
    <string name="nav_header_subtitle">Versión 2.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_books">Añade tus libros</string>
    <string name="num_book">Número de libro:</string>
    <string name="title">Titulo:</string>
    <string name="author">Autor:</string>
    <string name="description">Descripción:</string>
    <string name="status">Estado:</string>
    <string name="login">Entrar</string>
    <string name="checkin">Registrarse</string>

    <string name="read">Leído</string>
    <string name="reading">Leyendo</string>
    <string name="to_read">Para Leer</string>
    <string name="wish">Deseados</string>

    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="search">Buscar</string>
    <string name="accept">Aceptar</string>
    <string name="change">Cambiar usuario</string>
    <string name="search_title">Buscar por título</string>
    <string name="search_author">Buscar por autor</string>
    <string name="update_delete">Editar/Eliminar</string>
    <string name="insert_number">Introduce el número de libro:</string>
    <string name="update_book">Actualizar</string>
    <string name="delete_book">Eliminar</string>
    <string name="name">Por favor, introduce tu nombre:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>