<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="4"
    tools:context=".AddFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="right"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >


        <TextView
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:fontFamily="cursive"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:ems="10"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/add_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="cursive"
            android:text="@string/author"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/add_et_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="text"

            android:gravity="start|top"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="cursive"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/add_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:maxLength="300"
            android:gravity="start|top"
            android:textSize="20sp"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/add_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/add_rb_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textSize="22sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/read"
            />

        <RadioButton
            android:id="@+id/add_rb_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textSize="22sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/reading"/>

        <RadioButton
            android:id="@+id/add_rb_to_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textSize="22sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/to_read"/>

        <RadioButton
            android:id="@+id/add_rb_wish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textSize="22sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/wish"/>

    </RadioGroup>

    <LinearLayout
        android:id="@+id/add_ly_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/add_bt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>