<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.delete.DeleteFragment">
    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/insert_number" />

        <TextView
            android:id="@+id/delete_tw_id"
            android:layout_width="202dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/delete_et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Número de libro"
            android:inputType="number" />

        <Button
            android:id="@+id/delete_imageButton_search"
            android:layout_width="69dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:drawableBottom="@drawable/search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <EditText
            android:id="@+id/delete_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/delete_et_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="start|top"

            android:inputType="text"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/delete_et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="300"
            android:textSize="20sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/delete_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/delete_rb_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/read"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/delete_rb_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/reading"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/delete_rb_to_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/to_read"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/delete_rb_wish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/wish"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/delete_ly_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_bt_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_book" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/delete_bt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_book" />
    </LinearLayout>

</LinearLayout>